--- a/web/src/app/homepage/home-page/homepage.component.scss
+++ b/web/src/app/homepage/home-page/homepage.component.scss
@@ -59,9 +59,9 @@
   h4 {
     text-align: center;
     font-size: 32px;
-    font-weight: 600;
     color: #333;
     letter-spacing: 1px;
+    margin-bottom: 32px;
   }
 }
 
