--- a/web/src/app/dashboard/sys-list/sys-list.component.scss
+++ b/web/src/app/dashboard/sys-list/sys-list.component.scss
@@ -3,6 +3,7 @@
     right: 32px;
     color: gray;
     z-index: 1;
+    top: 44px;
     p{
         margin-bottom: 4px;
         font-weight: bold;
