--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -348,7 +348,7 @@
           <a
             appMonitorABlank
             target="_blank"
-            href="http://coolwow.myselfbuy.com/"
+            href="http://coolwow.msedt.com/"
             title="一款帮你选择贷款方式的多功能利息计算工具"
             >酷娃利息对比计算工具</a
           >
