--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -221,7 +221,7 @@
         </pre
       >
       <pre style="font-size: 16px; font-family: cursive">
-        困境：
+        支持：
         每一个做开源项目的个人或团队，都深知开源项目的不易。
         我们会花费无数个日日夜夜，想办法做出更好的产品。
         时间、资金、团队都是我们所需要的。
@@ -334,7 +334,7 @@
       </ul>
     </div>
     <div class="grid">
-      <h3>推广(招商中)</h3>
+      <h3>友链(联系作者)</h3>
       <ul>
         <li>
           <a
