--- a/web/src/app/web/web-sys/sys-setting/sys-setting.component.html
+++ b/web/src/app/web/web-sys/sys-setting/sys-setting.component.html
@@ -147,9 +147,8 @@
     <nz-divider></nz-divider>
   </div>
   <h3>复制/粘贴BI探针</h3>
-  <p>复制下方的代码，将其粘贴在页面HTML的body中。</p>
-  <p style="margin-bottom: 4px">
-    注意1：需要将代码粘贴在body内容的第一行，如需帮助请联系作者。
+  <p>
+    复制下方的代码，将其粘贴在页面HTML的body中。需要将代码粘贴在body内容的第一行，重新部署后生效。如需帮助请联系作者。
   </p>
   <div class="setting-code">
     <code>
@@ -157,24 +156,24 @@
     </code>
   </div>
   <nz-divider></nz-divider>
-  <h3>示例展示</h3>
-  <p>1.在Angular2+中使用__ml.error(),在你应用的根模块中加载下面代码：</p>
+  <h3>手动上报,勾选上面手动上报配置后，可以使用下面接口手动上报数据:</h3>
+  <p>手动上报API数据</p>
   <div class="setting-code">
     <pre>
-      <code>
-        {{tip.code1}} 
-      </code>
-    </pre>
-  </div>
-  <br />
-  <p>2.手动上报API成功率__ml.api(api,success, time, code, msg)：</p>
-  <div class="setting-code">
-    <pre>
+       __ml.api(api,success, time, code, msg):
         api:请求接口
         success:上传是否成功(true/false )
         time:耗时(ms)
         code:返回码
         msg:消息(string/object)
+    </pre>
+  </div>
+  <br />
+  <p>手动上传JS错误</p>
+  <div class="setting-code">
+    <pre>
+        __ml.error(errorobj):
+        errorobj:js错误对象
     </pre>
   </div>
 </div>
